--- a/index.html
+++ b/index.html
@@ -109,17 +109,17 @@
           <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide">
-              <img src="/assets/interview-1.png" alt="Interview Showcase"
+              <img src="/website/assets/interview-1.png" alt="Interview Showcase"
                    class="w-full h-full object-cover rounded-2xl">
             </div>
             <!-- Slide 2 -->
             <div class="swiper-slide">
-              <img src="/assets/interview-2.png" alt="Interview Showcase"
+              <img src="/website/assets/interview-2.png" alt="Interview Showcase"
                    class="w-full h-full object-cover rounded-2xl">
             </div>
             <!-- Slide 3 -->
             <div class="swiper-slide">
-              <img src="/assets/interview-3.png" alt="Interview Showcase"
+              <img src="/website/assets/interview-3.png" alt="Interview Showcase"
                    class="w-full h-full object-cover rounded-2xl">
             </div>
           </div>
