Redesigned Some Panel

--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
     new Swiper(".mySwiper", {
       loop: true,
       autoplay: {
-        delay: 3000, // 3 seconds per slide
+        delay: 3000, 
         disableOnInteraction: false,
       },
       pagination: {
